# voice_upside_down

./: .gitignore  CMakeLists.txt  CMakeLists_Qt6.txt  CMakeLists_Universal.txt  README.md  git_push_and_switch.bat
android/: ALTERNATIVE_APK.md  AndroidManifest.xml  BUILD.md  CHECK_ANDROID_SUBCOMPONENTS.md  CREATE_APK.md  CREATE_APK_MANUAL.md  CREATE_APK_QT6.md  FINAL_SOLUTION.md  FIND_ANDROIDDEPLOYQT.md  FIND_ANDROID_TOOLS_STEPS.md  FIX_RUN_SETTINGS.md  FIX_RUN_SETTINGS_QT6.md  INSTALL_ANDROID_KIT.md  INSTALL_ANDROID_TOOLS.md  INSTALL_QT6_MULTIMEDIA.md  NO_ANDROID_TOOLS_SOLUTION.md  QT6_MIGRATION.md  QTCREATOR_APK_BUILD.md  QTCREATOR_SETUP.md  QUICK_APK_GUIDE.md  RUN_SETTINGS.md  SIMPLE_SOLUTION.md  TESTING.md  WHERE_ANDROID_TOOLS.md
android/res/values/: libs.xml  strings.xml
installer/: README.md  VoiceUpsideDown.iss  ИНСТРУКЦИЯ.txt
installer/config/: config.xml
qml/: main.qml  main_android.qml
qml/components/: PrimaryButton.qml  SegmentRow.qml  StatusBadge.qml  WaveformView.qml
qml/theme/: Colors.qml  Theme.qml  qmldir
resources/: qml.qrc
src/: CMakeLists.txt  CMakeLists_Qt6.txt  CMakeLists_Universal.txt  appcontroller.cpp  appcontroller.h  main.cpp
src/audio/: audiobuffer.cpp  audiobuffer.h  audiofiledecoder.cpp  audiofiledecoder.h  audioplaybackengine.cpp  audioplaybackengine.h  audioproject.cpp  audioproject.h  qt6_compat.h  recordingengine.cpp  recordingengine.h  segmentmodel.cpp  segmentmodel.h  volumeanalyzer.cpp  volumeanalyzer.h  wavutils.cpp  wavutils.h
src/persistence/: projectserializer.cpp  projectserializer.h
src/utils/: logger.h  pathutils.cpp  pathutils.h
